# hyprbar

./: .git_commit_msg  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DISH_CREATION_GUIDE.md  PLUGIN_API.md  README.md  TMPCOMMIT.MSG  install.sh  justfile  ksdev.mojo  test_pure.mojo  tmp.txt
.agent/rules/: code-style-guide.md  commit-rule.md
.agent/workflows/: debug-ui.md
.serena/: project.yml
.serena/memories/: animation_api_refactor_2025_12_11.md  architecture_update_2025_12_11.md  commit_protocol.md  debug_cli_fix_2025_12_14.md  debug_logging_impl_2025_12_14.md  file_logging_implementation_2025_12_11.md  install_fix_2025_12_14.md  ks_bin_refactor_async_2025_12_11.md  log_forwarding_impl_2025_12_14.md  plugin_system_update_2025_12_11.md  project_status_update_2025_12_12.md  project_summary.md  suggested_commands.md
crates/ks-bin/: Cargo.toml
crates/ks-bin/src/: main.rs  plugin_loader.rs
crates/ks-bin/src/modules/: autostart.rs  bootstrap.rs  build.rs  config.rs  daemon.rs  logging.rs  runner.rs  wayland_integration.rs
crates/ks-bin/src/tui/: app.rs  event.rs  mod.rs  ui.rs
crates/ks-lib/: Cargo.toml
crates/ks-lib/benches/: core_bench.rs
crates/ks-lib/src/: bus.rs  config.rs  dish.rs  lib.rs  prelude.rs  renderer.rs  state.rs
crates/ks-ui/src/: label.rs  lib.rs  style.rs
crates/ks-wayland/: Cargo.toml
crates/ks-wayland/src/: handlers.rs  state.rs
examples/: battery.rs  datetime.rs  interaction_demo.rs  separator.rs  text_area.rs  tray_space.rs  ui_kit_demo.rs
ks-bin/: Cargo.toml
ks-bin/src/: main.rs  plugin_loader.rs
ks-bin/src/modules/: bootstrap.rs  build.rs  cli.rs  config.rs  daemon.rs  install.rs  logging.rs  mod.rs  registry.rs  runner.rs  watcher.rs  wayland_integration.rs
ks-bin/src/tui/: app.rs  mod.rs  ui.rs
ks-core/: Cargo.toml
ks-core/benches/: core_bench.rs
ks-core/src/: config.rs  dish.rs  event.rs  lib.rs  prelude.rs  renderer.rs  state.rs
ks-ui/: Cargo.toml
ks-ui/src/: container.rs  interaction.rs  label.rs
ks-wayland/: Cargo.toml
ks-wayland/src/: blitter.rs  handlers.rs  lib.rs  state.rs  text.rs
src/: bus.rs  config.rs  event.rs  lib.rs  plugin_loader.rs  renderer.rs  state.rs  theme.rs  widget.rs
src/cli/: mod.rs
src/modules/: autostart.rs  bootstrap.rs  build.rs  cli.rs  config.rs  daemon.rs  install.rs  logging.rs  mod.rs  registry.rs  runner.rs  watcher.rs  wayland_integration.rs
src/renderer/: input.rs  layout.rs  mod.rs  popup.rs  types.rs  widgets.rs
src/tui/: app.rs  event.rs  mod.rs  ui.rs
src/ui/: container.rs  interaction.rs  label.rs  mod.rs  style.rs
src/wayland/: blitter.rs  handlers.rs  mod.rs  state.rs  text.rs
tmp_probe/: Cargo.toml
tmp_probe/src/: main.rs
tools/: debug_view.py  ksdev.mojo  requirements.txt  stats.mojo  wash.mojo
