[package]
name = "hyprbar"
description = "Wayland status bar for Hyprland"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/ryugen-io/hyprbar"
autoexamples = false

[features]
default = ["cli"]
cli = ["dep:clap"]

[lib]
name = "hyprbar"

[[bin]]
name = "hyprbar"
path = "src/bin/hyprbar.rs"
required-features = ["cli"]

[dependencies]
# Hypr ecosystem
hyprink = { git = "ssh://git@github.com/ryugen-io/hyprink.git", branch = "master", default-features = false }
hyprlog = { git = "ssh://git@github.com/ryugen-io/hyprlog.git", branch = "main", default-features = false }

# Core
ratatui = "*"
tachyonfx = { version = "*", features = ["std-duration", "sendable"] }
anyhow = "*"
log = "*"
thiserror = "*"
serde = { version = "*", features = ["derive"] }
toml = "*"

# Async
tokio = { version = "*", features = ["full"] }

# Wayland
smithay-client-toolkit = { version = "*", features = ["calloop"] }
wayland-client = "*"
cosmic-text = "*"

# CLI
clap = { version = "*", features = ["derive"], optional = true }
colored = "*"
which = "*"
chrono = "*"
crossterm = "*"
sysinfo = "*"

# Tracing
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
tracing-appender = "*"
tracing-log = "*"

# Misc
libloading = "*"
dirs = "*"
postcard = { version = "*", features = ["alloc"] }
serde_json = "*"
procfs = "*"
nix = { version = "*", features = ["signal"] }
glob = "*"

[dev-dependencies]
tempfile = "*"
criterion = { version = "*", features = ["html_reports"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
