[package]
name = "ks-bin"
version = "0.1.0"
edition = "2024"

[dependencies]
ks-core = { workspace = true }
ks-wayland = { workspace = true }
kitchn_lib = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
smithay-client-toolkit = { workspace = true }
wayland-client = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
which = "8.0.0"
chrono = "0.4.42"
ratatui = { workspace = true }
tachyonfx = { workspace = true }
crossterm = { workspace = true }
sysinfo = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
