[package]
name = "ks-wayland"
version = "0.1.0"
edition = "2024"

[dependencies]
smithay-client-toolkit = { workspace = true, features = ["calloop"] }
wayland-client = { workspace = true }
ratatui = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
thiserror = "2.0"
kitchn_lib = { workspace = true }
