[package]
name = "probe"
version = "0.1.0"
edition = "2024"

[dependencies]
ks-core = { path = "../ks-core" }
k-lib = { git = "https://github.com/ryugen-io/kitchN" }
ratatui = "0.29.0"
tachyonfx = { version = "0.21.0", features = ["std-duration"] }
anyhow = "1.0"
log = "0.4"
tokio = { version = "1.42", features = ["full"] }
smithay-client-toolkit = "0.20"
wayland-client = "0.31"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
crossterm = "0.28.1"
sysinfo = "0.37"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
