[package]
name = "ks-bin"
version = "0.1.0"
edition = "2024"

[dependencies]
ks-lib = { workspace = true }
ks-wayland = { workspace = true }
k-lib = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
smithay-client-toolkit = { workspace = true }
wayland-client = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
which = "8.0.0"
chrono = "0.4.42"
ratatui = { workspace = true }
tachyonfx = { workspace = true }
crossterm = { workspace = true }
sysinfo = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-appender = { workspace = true }
tracing-log = "0.2.0"
libloading = "0.9.0"
dirs = "6.0.0"
bincode = "1.3"
serde_json = "1.0.145"
procfs = "0.16"
nix = { version = "0.27", features = ["signal"] }
glob = "0.3.3"
