[package]
name = "ks-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { workspace = true }
tachyonfx = { workspace = true }
k-lib = { workspace = true }
ks-ui = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
thiserror = "2.0"
serde = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "core_bench"
harness = false
